# SylvaniaLauncher

./: .gitignore  LICENSE  README.md  README_SIGNING.md  README_TROUBLESHOOTING.md  SylvaniaLauncher.bat  SylvaniaLauncher.iss  SylvaniaLauncher_Portable.bat  build.gradle.kts  config.py  create_certificate.bat  create_portable.bat  debug_settings.py  download_client.py  download_client_new.py  fix_icons.bat  game_tracker.py  get_python.bat  gui.py  info_after.txt  info_before.txt  license_info.txt  main.py  rebuild_app.bat  rebuild_with_sounds.bat  release_notes.txt  release_notes_2_5.txt  release_notes_updated.txt  requirements.txt  settings.gradle.kts  sound_manager.py  test_settings_button.py  update_icons.bat  version.py
.github/workflows/: build-linux.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/profiles/: controls-10.icp
app/src/main/assets/wincomponents/: wincomponents.json
app/src/main/java/com/sylvania/launcher/: SylvaniaLauncherActivity.kt
app/src/main/java/com/sylvania/launcher/core/io/: ZipExtractor.kt
app/src/main/java/com/sylvania/launcher/core/patch/: HdComponentToggle.kt  HdPatchManager.kt
app/src/main/java/com/sylvania/launcher/core/realmlist/: RealmlistWriter.kt
app/src/main/java/com/sylvania/launcher/runtime/: RuntimeInstaller.kt  WineLauncher.kt
app/src/main/java/com/sylvania/launcher/ui/: MainActivity.kt
app/src/main/java/com/winlator/cmod/: ContainerDetailFragment.java  SettingsFragment.java  XServerDisplayActivity.java
app/src/main/java/com/winlator/cmod/container/: Container.java  ContainerManager.java
app/src/main/java/com/winlator/cmod/contentdialog/: GraphicsDriverConfigDialog.java  ShortcutSettingsDialog.java
app/src/main/java/com/winlator/cmod/contents/: ContentProfile.java  ContentsManager.java
app/src/main/java/com/winlator/cmod/core/: DefaultVersion.java  ProcessHelper.java  Win32AppWorkarounds.java  WineInfo.java  WineUtils.java
app/src/main/java/com/winlator/cmod/widget/: EnvVarsView.java
app/src/main/java/com/winlator/cmod/xenvironment/: ImageFsInstaller.java
app/src/main/java/com/winlator/cmod/xenvironment/components/: BionicProgramLauncherComponent.java  GuestProgramLauncherComponent.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: container_detail_fragment.xml  graphics_driver_config_dialog.xml  settings_fragment.xml  shortcut_settings_dialog.xml
app/src/main/res/menu/: xserver_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  strings_sylvania.xml  themes.xml
app/src/main/res/values-en/: strings_sylvania.xml
app/src/test/java/com/sylvania/launcher/core/: LauncherLogicTest.kt
build-appimage/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build-appimage/AppDir/: .DirIcon  AppRun  sylvania-launcher.desktop
build-appimage/AppDir/usr/lib/: libQt6Multimedia.so.6  libgstallocators-1.0.so.0  libgstapp-1.0.so.0  libgstaudio-1.0.so.0  libgstgl-1.0.so.0  libgstpbutils-1.0.so.0  libgsttag-1.0.so.0  libgstvideo-1.0.so.0  libsystemd.so.0  libudev.so.1  libwayland-cursor.so.0  libwayland-egl.so.1  libwayland-server.so.0  libzip.so.4
build-appimage/SylvaniaLauncher_autogen/: moc_predefs.h  mocs_compilation.cpp
build-appimage/SylvaniaLauncher_autogen/PRMOGMWJPH/: moc_ConfigManager.cpp.d  moc_HdPatchManager.cpp.d  moc_NotesManager.cpp.d  moc_SoundManager.cpp.d  moc_WineManager.cpp.d
build-appimage/SylvaniaLauncher_autogen/VSCBVMNR7M/: moc_ZipExtractor.cpp.d
build-appimage/SylvaniaLauncher_autogen/YPKJ5OE7LN/: moc_AddonsWindow.cpp.d  moc_DownloadDialog.cpp.d  moc_MainWindow.cpp.d  moc_NotesWindow.cpp.d  moc_RealmlistWindow.cpp.d  moc_SettingsDialog.cpp.d  moc_WowButton.cpp.d
cpp/: CMakeLists.txt
cpp/resources/: addons.json  addons_legion.json  app.rc  legion_client.chunks  resources.qrc
cpp/resources/translations/: SylvaniaLauncher_en.ts
cpp/src/: main.cpp
cpp/src/core/: AddonManifest.cpp  AddonManifest.h  AddonRegistry.cpp  AddonRegistry.h  BuildInfoPatcher.cpp  BuildInfoPatcher.h  ConfigManager.cpp  ConfigManager.h  Constants.h  GameEdition.cpp  GameEdition.h  HdPatchManager.cpp  HdPatchManager.h  NotesManager.cpp  NotesManager.h  ReminderService.cpp  ReminderService.h  SoundManager.cpp  SoundManager.h  WineManager.cpp  WineManager.h
cpp/src/ui/: AddonsWindow.cpp  AddonsWindow.h  ButtonStyles.cpp  ButtonStyles.h  DownloadDialog.cpp  DownloadDialog.h  MainWindow.cpp  MainWindow.h  NotesWindow.cpp  NotesWindow.h  RealmlistWindow.cpp  RealmlistWindow.h  ServerEditDialog.cpp  ServerEditDialog.h  SettingsDialog.cpp  SettingsDialog.h  WowButton.cpp  WowButton.h
cpp/src/utils/: PathUtils.cpp  PathUtils.h  ZipExtractor.cpp  ZipExtractor.h
docs/: ARCHITECTURE.md  RUNTIME_INTEGRATION.md
launcher-graft/: README.sylvania.md
launcher-graft/sylvania/launcher/core/: Constants.kt
launcher-graft/sylvania/launcher/core/config/: ConfigManager.kt  LauncherConfig.kt
launcher-graft/sylvania/launcher/core/launch/: GameLauncher.kt
launcher-graft/sylvania/launcher/core/patch/: WowConfigWriter.kt
launcher-graft/sylvania/launcher/runtime/: ImageFs.kt  RootfsExtractor.kt
launcher-graft/sylvania/launcher/ui/: LauncherViewModel.kt
linux/: Dockerfile  build-appimage.sh  sylvania-launcher.desktop
server/: README-addons.md
